correct altersheet input reload issue 2

--- a/cover/index.html
+++ b/cover/index.html
@@ -17,7 +17,7 @@
 <div id="header">
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">73%</span>
+            <span class="pc_cov">81%</span>
         </h1>
         <img id="keyboard_icon" src="keybd_closed.png" alt="Show keyboard shortcuts" />
         <form id="filter_container">
@@ -52,10 +52,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1203</td>
-                <td>325</td>
+                <td>1146</td>
+                <td>222</td>
                 <td>0</td>
-                <td class="right" data-ratio="878 1203">73%</td>
+                <td class="right" data-ratio="924 1146">81%</td>
             </tr>
         </tfoot>
         <tbody>
@@ -96,13 +96,20 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_mail_manager_py.html">mail/mail_manager.py</a></td>
-                <td>40</td>
-                <td>12</td>
+                <td>35</td>
+                <td>11</td>
                 <td>0</td>
-                <td class="right" data-ratio="28 40">70%</td>
+                <td class="right" data-ratio="24 35">69%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_management___init___py.html">mail/management/__init__.py</a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="mail_management_commands___init___py.html">mail/management/commands/__init__.py</a></td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -145,31 +152,31 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_models_py.html">mail/models.py</a></td>
-                <td>80</td>
-                <td>49</td>
+                <td>85</td>
+                <td>44</td>
                 <td>0</td>
-                <td class="right" data-ratio="31 80">39%</td>
+                <td class="right" data-ratio="41 85">48%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_urls_py.html">mail/urls.py</a></td>
-                <td>5</td>
+                <td>4</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="5 5">100%</td>
+                <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_utils_py.html">mail/utils.py</a></td>
-                <td>38</td>
-                <td>3</td>
+                <td>36</td>
+                <td>1</td>
                 <td>0</td>
-                <td class="right" data-ratio="35 38">92%</td>
+                <td class="right" data-ratio="35 36">97%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mail_views_py.html">mail/views.py</a></td>
-                <td>122</td>
-                <td>4</td>
+                <td>112</td>
+                <td>1</td>
                 <td>0</td>
-                <td class="right" data-ratio="118 122">97%</td>
+                <td class="right" data-ratio="111 112">99%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mydashboard___init___py.html">mydashboard/__init__.py</a></td>
@@ -208,17 +215,17 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mydashboard_utils_py.html">mydashboard/utils.py</a></td>
-                <td>49</td>
-                <td>14</td>
+                <td>56</td>
+                <td>9</td>
                 <td>0</td>
-                <td class="right" data-ratio="35 49">71%</td>
+                <td class="right" data-ratio="47 56">84%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="mydashboard_views_py.html">mydashboard/views.py</a></td>
-                <td>23</td>
-                <td>6</td>
+                <td>26</td>
+                <td>7</td>
                 <td>0</td>
-                <td class="right" data-ratio="17 23">74%</td>
+                <td class="right" data-ratio="19 26">73%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet___init___py.html">sheet/__init__.py</a></td>
@@ -250,10 +257,10 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet_form_py.html">sheet/form.py</a></td>
-                <td>158</td>
-                <td>40</td>
+                <td>141</td>
+                <td>14</td>
                 <td>0</td>
-                <td class="right" data-ratio="118 158">75%</td>
+                <td class="right" data-ratio="127 141">90%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet_migrations_0001_initial_py.html">sheet/migrations/0001_initial.py</a></td>
@@ -293,30 +300,30 @@
             <tr class="file">
                 <td class="name left"><a href="sheet_models_py.html">sheet/models.py</a></td>
                 <td>139</td>
-                <td>76</td>
+                <td>52</td>
                 <td>0</td>
-                <td class="right" data-ratio="63 139">45%</td>
+                <td class="right" data-ratio="87 139">63%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet_urls_py.html">sheet/urls.py</a></td>
-                <td>5</td>
+                <td>4</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="5 5">100%</td>
+                <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet_utils_py.html">sheet/utils.py</a></td>
-                <td>182</td>
-                <td>9</td>
+                <td>180</td>
+                <td>2</td>
                 <td>0</td>
-                <td class="right" data-ratio="173 182">95%</td>
+                <td class="right" data-ratio="178 180">99%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="sheet_views_py.html">sheet/views.py</a></td>
-                <td>272</td>
-                <td>80</td>
+                <td>238</td>
+                <td>49</td>
                 <td>0</td>
-                <td class="right" data-ratio="192 272">71%</td>
+                <td class="right" data-ratio="189 238">79%</td>
             </tr>
         </tbody>
     </table>
@@ -328,7 +335,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io">coverage.py v5.3</a>,
-            created at 2020-10-16 18:59 +0200
+            created at 2020-10-18 22:35 +0200
         </p>
     </div>
 </div>
