--- a/cover/mail_form_py.html
+++ b/cover/mail_form_py.html
@@ -62,7 +62,7 @@
     <p id="t9" class="pln"><span class="n"><a href="#t9">9</a></span><span class="t">    <span class="op">(</span><span class="str">"1"</span><span class="op">,</span> <span class="str">"&#224; la cr&#233;ation de la fiche,"</span><span class="op">)</span><span class="op">,</span>&nbsp;</span><span class="r"></span></p>
     <p id="t10" class="pln"><span class="n"><a href="#t10">10</a></span><span class="t">    <span class="op">(</span><span class="str">"2"</span><span class="op">,</span> <span class="str">"quand je modifie la valeur de la caution,"</span><span class="op">)</span><span class="op">,</span>&nbsp;</span><span class="r"></span></p>
     <p id="t11" class="pln"><span class="n"><a href="#t11">11</a></span><span class="t">    <span class="op">(</span><span class="str">"3"</span><span class="op">,</span> <span class="str">"&#224; la suppression d'une fiche,"</span><span class="op">)</span><span class="op">,</span>&nbsp;</span><span class="r"></span></p>
-    <p id="t12" class="pln"><span class="n"><a href="#t12">12</a></span><span class="t">    <span class="op">(</span><span class="str">"4"</span><span class="op">,</span> <span class="str">"toutes les deux semaines,"</span><span class="op">)</span><span class="op">,</span>&nbsp;</span><span class="r"></span></p>
+    <p id="t12" class="pln"><span class="n"><a href="#t12">12</a></span><span class="t">    <span class="op">(</span><span class="str">"4"</span><span class="op">,</span> <span class="str">"toutes les deux semaines,(fonctionalit&#233; &#224; vernir)"</span><span class="op">)</span><span class="op">,</span>&nbsp;</span><span class="r"></span></p>
     <p id="t13" class="pln"><span class="n"><a href="#t13">13</a></span><span class="t">    <span class="op">(</span><span class="str">"5"</span><span class="op">,</span> <span class="str">"quand l'animal devient st&#233;rilisable."</span><span class="op">)</span><span class="op">)</span>&nbsp;</span><span class="r"></span></p>
     <p id="t14" class="pln"><span class="n"><a href="#t14">14</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p id="t15" class="run"><span class="n"><a href="#t15">15</a></span><span class="t"><span class="key">class</span> <span class="nam">SettingsMail</span><span class="op">(</span><span class="nam">forms</span><span class="op">.</span><span class="nam">Form</span><span class="op">)</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
@@ -90,7 +90,7 @@
     <div class="content">
         <p>
             <a class="nav" href="index.html">&#xab; index</a> &nbsp; &nbsp; <a class="nav" href="https://coverage.readthedocs.io">coverage.py v5.3</a>,
-            created at 2020-10-15 08:23 +0200
+            created at 2020-10-18 22:35 +0200
         </p>
     </div>
 </div>
